# video-stitch

./: CMakeLists.txt  apap.h  exposure_compensator.cpp  exposure_compensator.h  stdafx.h  targetver.h  video_stitch.cpp  video_stitcher.cpp  video_stitcher.h
